@@ -1,3 +1,6 @@
+	38. ChppciOpenHrpClient::loadHrp2Model() now takes a shared pointer to
+	    a humanoid robot.
+	
 hpp-corbaserver 1.3 released May 13, 2008.
 
 	37. idl interfaces are now wrapped into module hppCorbaServer. 
